# Pixiu

./: .env.example  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  llm_out.txt  pyproject.toml  specs_diff.tmp  test_deepseek_import.py  test_experiment_4.py  test_researcher.py
.ai-team/outputs/: codex-qlib-env-last-message.txt  codex-qlib-env-status.json
.codex/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture-change.yml  experiment-run.yml  runtime-fix.yml
config/: llm_runtime.json
config/experiments/: controlled_run.json  default.json  fast_feedback.json
docker/: Dockerfile.coder
docs/: 00_documentation-standard.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SNAPSHOT.md  README.md  qlib_data_pipeline_best_practices.md  v2_refactoring_report.md
docs/archive/: README.md
docs/decisions/: 2026-03-27-team-runtime-workflow-reset-approval.md
docs/design/: 10_authority-model.md  11_interface-contracts.md  12_orchestrator.md  13_control-plane.md  14_factor-pool.md  15_data-sources.md  16_test-pipeline.md  17_failure-constraint.md  18_synthesis-agent.md  (+29 more)
docs4ai/: deep_dive_core_references.md
mcp_servers/: akshare_server.py  chromadb_server.py  cross_market_server.py  rss_server.py  tushare_server.py
scratch/: hello_quant.py
scripts/: convert_daily_basic_to_qlib.py  convert_fundamental_to_qlib.py  doctor.py  download_daily_basic_data.py  download_fundamental_data.py  download_margin_history.py  download_moneyflow_data.py  download_moneyflow_hsgt.py  download_qlib_data.py  download_stk_limit_data.py  experiment_preflight.py  refactor_logging.py  reset_experiment_state.py  run_experiment_harness.py
tests/: conftest.py  test_akshare_mcp.py  test_api_state_store.py  test_chroma_runtime.py  test_cli_progress.py  test_cli_smoke.py  test_composition_constraints.py  test_constraints.py  test_cross_market_mcp.py  test_daily_basic_pipeline.py  test_data_download_scripts.py  test_data_readiness.py  test_dataset_registry.py  test_doctor.py  test_e2e_pipeline.py  test_e2e_stage1_to_stage3.py  test_env.py  test_execution.py  test_experiment_harness.py  test_experiment_preflight.py  test_experiment_runtime_paths.py  test_exploration_registry.py  test_factor_pool.py  test_factor_pool_storage.py  test_factor_pool_write_paths.py  test_failure_constraint.py  test_formula_capabilities.py  test_formula_gene.py  test_formula_sketch.py  test_fundamental_pipeline.py  test_hypothesis_schema.py  test_judgment.py  test_judgment_pool_writeback.py  test_litellm_chat.py  test_llm_config.py  test_llm_runtime_settings.py  test_llm_usage_ledger.py  test_market_context.py  test_mcp_servers.py  test_moneyflow_hsgt_pipeline.py  (+38 more)
(+349 files in other folders)
