[project]
name = "pixiu"
version = "2.0.0"
description = "Pixiu — A Multi-Agent Framework for Quantitative Alpha Discovery in A-Shares"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyqlib",
    "lightgbm",
    "pandas",
    "polars",
    "langchain",
    "langgraph",
    "langchain-openai",
    "langchain-mcp-adapters",
    "python-dotenv",
    "mlflow",
    "akshare",
    "baostock",
    "chromadb",
    "typer[all]",
    "rich",
    "fastapi",
    "uvicorn[standard]",
    "tqdm",
    "scikit-learn",
    "scipy",
    "fredapi>=0.5.2",
    "yfinance>=1.2.0",
    "feedparser>=6.0",
    "tushare>=1.4.25",
    "onnxruntime>=1.24.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "socksio>=1.0",
]

[project.scripts]
pixiu = "src.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke: fast, deterministic smoke checks for core functionality",
    "unit: pure unit tests without external dependencies",
    "integration: local integration tests with isolated dependencies",
    "live: tests that hit live external services or data sources",
    "e2e: end-to-end workflow tests in full runtime environments",
    "asyncio: async tests running on an asyncio event loop",
]
